--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "lpc17xx_gpio.h": "c",
         "lpc17xx_pinsel.h": "c",
-        "lpc17xx.h": "c"
+        "lpc17xx.h": "c",
+        "lpc17xx_adc.h": "c"
     }
 }
